# TalkyTalk

./: DOCS.md  LICENSE.txt  README.md  pyproject.toml
examples/: basic_usage.py  microphone_demo.py  simple_test.py
talkytalk/: __init__.py  sources.py
talkytalk/adapters/: __init__.py  base.py
talkytalk/analyzers/: __init__.py  base.py  emotion.py  language.py  prosody.py  vad.py
talkytalk/behavior/: __init__.py  mapper.py
talkytalk/benchmark/: __init__.py  metrics.py
talkytalk/core/: __init__.py  packet.py  pipeline.py  stream.py
talkytalk/predictors/: __init__.py  base.py  early_intent.py  intent.py  overlap.py  timing.py
talkytalk/sources/: __init__.py  microphone.py  synthetic.py
tests/: __init__.py  test_packet.py  test_pipeline.py
