[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talkytalk"
version = "0.1.0"
description = "Real-time behavioral speech signal processor"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["speech", "realtime", "intent", "prosody", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]
audio = [
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
]

[tool.hatch.build.targets.wheel]
packages = ["talkytalk"]

[tool.mypy]
python_version = "3.10"
strict = true
